--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
   
   </footer>
   <div class="text-center mt-4">
-    <h5 class="fw-bold" style="color: black;">CUPPON</h5>
+    <h5 class="fw-bold" style="color: black;">CUPPONAZOOOOEXTRA</h5>
     <p class="text-muted">@ 2018 Cuppon Latam. Todos los derechos reservados.</p>
 </div>
   
